--- a/package.json
+++ b/package.json
@@ -14,13 +14,20 @@
     "test": "jest --passWithNoTests"
   },
   "dependencies": {
-    "next": "12.1.0",
+    "@hookform/resolvers": "^2.8.8",
+    "next": "^12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "7.22.2",
+    "styled-components": "^5.3.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
+    "@types/styled-components": "^5.1.24",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
     "eslint": "8.11.0",
@@ -30,6 +37,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.5.1",
     "typescript": "4.6.2"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
