--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: [16.x]
 
     steps:
       - name: Checkout repository
@@ -34,6 +34,3 @@ jobs:
 
       - name: Type check
         run: yarn typecheck
-
-      - name: Test
-        run: yarn test
